Correct layout spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ a:hover {
 
 .page-counter{
     color: #999;
-    margin-top: 40px;
+    margin: 40px 0 10px 0;
 }
 
 .first-name-input{
